[project]
name = "engine"
version = "0.1.0"
description = "Sample uv-based task runner image for Google Cloud Run Jobs"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = []

[project.scripts]
engine-job = "engine.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine"]
